--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,17 @@
 @import url(./blocks/popup-delete-card/__title/popup-delete-card__title.css);
 @import url(./blocks/popup-avatar/__content/popup-avatar__content.css);
 @import url(./blocks/element/__delete-button/_hidden/element__delete-button_hidden.css);
+@import url(./blocks/auth/auth.css);
+@import url(./blocks/auth/__title/auth__title.css);
+@import url(./blocks/auth/__input/auth__input.css);
+@import url(./blocks/auth/__form/auth__form.css);
+@import url(./blocks/auth/__submit-button/auth__submit-button.css);
+@import url(./blocks/auth/__link/auth__link.css);
+@import url(./blocks/header/__container/header__container.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__login/header__login.css);
+@import url(./blocks/header/__login/_active/header__login_active.css);
+@import url(./blocks/popup/__content/_auth/popup__content_auth.css);
+@import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__title/_auth/popup__title_auth.css);
+@import url(./blocks/header/__link/_authorized/header__link_authorized.css);
