--- a/src/blocks/auth/__input/auth__input.css
+++ b/src/blocks/auth/__input/auth__input.css
@@ -1,11 +1,13 @@
-.popup__form{
+.auth__input{
     font-family: 'Inter', sans-serif;
+    background-color: black;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    color: white;
+    border-bottom: 2px solid #CCCCCC;
     padding-bottom: 13px;
     margin-bottom: 30px;
     max-width: 358px;
@@ -13,22 +15,12 @@
     box-sizing: border-box;
 }
 
-.popup__form::placeholder {
+.auth__input::placeholder {
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: black;
-    opacity: 0.5;
+    color: #CCCCCC;
+    
   }
-
-  @media (max-width: 534px) {
-    .popup__form{
-      max-width: 238px;
-  }
- }
-
- .popup__input-container_invalid .popup__form {
-  border-bottom: 1px solid #FF0000;
-}
