--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,12 +1,13 @@
 .header{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     max-width: 880px;
     margin: 0 auto;
     padding-top: 45px;
     box-sizing: border-box;
     border-bottom: 1px solid rgba( 84, 84, 84, 0.7);
+    justify-content: space-between;
 }
 
 @media (max-width: 407px) {
